unpackaged/main/default/objects/Billing_Plans__c/Billing_Plans__c.object-meta.xml
<CustomObject>
    <label>Billing Plan</label>
    <nameField>
        <label>Billing Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BIlling Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>