unpackaged/main/default/objects/Billing_Plans__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>25535</length>
    <type>LongTextArea</type>
</CustomField>