unpackaged/main/default/objects/Billing_Plans__c/fields/EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveEndDate__c</fullName>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>