unpackaged/main/default/objects/Billing_Plans__c/fields/Stripe_Price_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Price_ID__c</fullName>
    <inlineHelpText>Price ID from Stripe System</inlineHelpText>
    <label>Stripe Price ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>