unpackaged/main/default/objects/Billing_Plans__c/fields/Stripe_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Product_ID__c</fullName>
    <description>Product ID from Stripe system</description>
    <label>Stripe Product ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>