unpackaged/main/default/objects/Billing_Plans__c/fields/Stripe_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Product_Name__c</fullName>
    <description>Product Name from Stripe</description>
    <label>Stripe Product Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>