unpackaged/main/default/objects/Billing_Plans__c/fields/Zuora_Rate_Plan_Charge_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Rate_Plan_Charge_Id__c</fullName>
    <externalId>true</externalId>
    <label>Zuora Rate Plan Charge Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>