unpackaged/main/default/objects/Billing_Plans__c/fields/Zuora_Rate_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Rate_Plan_Id__c</fullName>
    <externalId>true</externalId>
    <label>Zuora Rate Plan Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>