unpackaged/main/default/objects/Billing_Plans__c/listViews/All_Bill_Plans.listView-meta.xml
<ListView>
    <fullName>All_Bill_Plans</fullName>
    <columns>Billing_System__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Description__c</columns>
    <columns>Full_Name__c</columns>
    <columns>Price__c</columns>
    <columns>Zuora_Rate_Plan_Charge_Id__c</columns>
    <columns>Zuora_Rate_Plan_Id__c</columns>
    <columns>IsActive__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>EffectiveEndDate__c</columns>
    <columns>EffectiveStartDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Bill Plans</label>
</ListView>