unpackaged/main/default/objects/Billing_Plans__c/listViews/Zuora_Billing_Plans_Discounts.listView-meta.xml
<ListView>
    <fullName>Zuora_Billing_Plans_Discounts</fullName>
    <booleanFilter>1 AND (2 or 4) AND 3</booleanFilter>
    <columns>Billing_System__c</columns>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Description__c</columns>
    <columns>Zuora_Rate_Plan_Id__c</columns>
    <columns>Zuora_Rate_Plan_Charge_Id__c</columns>
    <columns>Price__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Billing_System__c</field>
        <operation>equals</operation>
        <value>Zuora-MC</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Discount</value>
    </filters>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>promo</value>
    </filters>
    <label>Zuora - Active Discounts</label>
</ListView>